--- a/src/app/components/input/comid-select-input/comid-select-input.component.html
+++ b/src/app/components/input/comid-select-input/comid-select-input.component.html
@@ -13,10 +13,14 @@
     <strong>This segment has no parameters or sources</strong>
   </div>
   <div *ngFor="let parameter of parameters" class="button">
-    <div>{{ parameter }}<mat-icon title="Remove Parameter">delete</mat-icon></div>
+    <div class="form-row">
+      <div class="vertical-center">{{ parameter }}</div><mat-icon title="Remove Parameter">delete</mat-icon>
+  </div>
   </div>
   <div *ngFor="let source of sources" class="button">
-    <div>{{ source }}<mat-icon title="Remove Parameter">delete</mat-icon></div>
+    <div class="form-row">
+      <div class="vertical-center">{{ source }}</div><mat-icon title="Remove Source">delete</mat-icon>
+  </div>
   </div>
   <div class="form-row" *ngIf="!addingParameter && !addingSource">
     <div class="button" (click)="addParameter()">Add Parameter</div>
@@ -45,7 +49,7 @@
     </div>
     <div class="form-row">
       <label>Loading Multiplier</label>
-      <input formControlName="loadingMulti" type="text">
+      <input formControlName="loadingMulti" type="number">
     </div>
     <div *ngIf="uploadedTimeSeries">
       <div class="table-flex-container">
@@ -101,7 +105,7 @@
     </div>
     <div class="form-row">
       <label>Loading Multiplier</label>
-      <input formControlName="loadingMulti" type="text">
+      <input formControlName="loadingMulti" type="number">
     </div>
     <div *ngIf="uploadedTimeSeries">
       <div class="table-flex-container">
@@ -122,7 +126,7 @@
     </div>
     <div class="form-row">
       <div class="button" (click)="cancelAdd()">Cancel</div>
-      <div class="button" (click)="insertParameter()">Insert Loadings</div>
+      <div class="button" (click)="insertSource()">Insert Loadings</div>
     </div>
   </div>
 </form>
