--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
 :root {
-    --main-color: lightgoldenrodyellow;
-    --main-background: lightsteelblue;
+    --main-color: rgb(250, 250, 210);
+    --main-background: rgb(176, 196, 222);
     --main-button: steelblue;
     --main-hover: rgba(146, 146, 146, 0.5);
     --main-active: rgb(250, 146, 146);
 
     --row-gap: .125rem;
     --column-gap: .125rem;
+}
+
+input[type='number'] {
+    text-align: center;
 }
 
 input[type='number'].input-comid {
