added inSim segment state for map indication

--- a/src/app/components/input/comid-select-input/comid-select-input.component.html
+++ b/src/app/components/input/comid-select-input/comid-select-input.component.html
@@ -1,132 +1,135 @@
-<div *ngIf="!selectedComId"><strong>click map to select stream segment</strong></div>
-
-<form [formGroup]="inputForm" *ngIf="selectedComId" class="segment-form">
+<div [formGroup]="inputForm">
+  <div><strong>Click map to add a segment</strong></div>
+  <div>- or -</div>
   <div class="form-row">
     <div class="vertical-center">
-      <div>Comid: <input class="input-comid" type="number" formControlName="comid" /></div>
+      <div>Comid <input class="input-comid" type="number" formControlName="comid" /></div>
     </div>
-    <div class="button" (click)="addSegment()">Add Segment</div>
-  </div>
-  <div><strong>Segment Loadings</strong></div>
-  <div>Parameters and Sources</div>
-  <div *ngIf="!parameters.length">
-    <strong>This segment has no parameters or sources</strong>
-  </div>
-  <div *ngFor="let parameter of parameters" class="button">
-    <div class="form-row">
-      <div class="vertical-center">{{ parameter }}</div><mat-icon title="Remove Parameter">delete</mat-icon>
-  </div>
-  </div>
-  <div *ngFor="let source of sources" class="button">
-    <div class="form-row">
-      <div class="vertical-center">{{ source }}</div><mat-icon title="Remove Source">delete</mat-icon>
-  </div>
-  </div>
-  <div class="form-row" *ngIf="!addingParameter && !addingSource">
-    <div class="button" (click)="addParameter()">Add Parameter</div>
-    <div class="button" (click)="addSource()">Add Source</div>
+    <div class="button" (click)="selectSegment()">Add/Select Segment</div>
   </div>
 
-  <div *ngIf="addingParameter" class="segment-form">
-    New Parameter
-    <div class="form-row">
-      <label>Use Constant Loading?</label>
-      <input type="checkbox" (change)="useConstLoadings = !useConstLoadings" checked>
+  <div *ngIf="selectedComId" class="segment-form">
+    <div><strong>Segment Loadings</strong></div>
+    <div>Parameters and Sources</div>
+    <div *ngIf="!parameters.length">
+      <strong>This segment has no parameters or sources</strong>
     </div>
-    <div class="form-row">
-      <label *ngIf="useConstLoadings">Constant Loading</label>
-      <input *ngIf="useConstLoadings" formControlName="constLoading" type="text">
+    <div *ngFor="let parameter of parameters" class="button">
+      <div class="form-row">
+        <div class="vertical-center">{{ parameter }}</div><mat-icon title="Remove Parameter">delete</mat-icon>
     </div>
-    <div class="form-row">
-      <label *ngIf="!useConstLoadings">Upload Loading</label>
-      <input *ngIf="!useConstLoadings" 
-        formControlName="altLoadings"
-        type="file"  
-        accept=".csv"
-        name="files[]"
-        (change)="onFileChange($event)"
-      />
     </div>
-    <div class="form-row">
-      <label>Loading Multiplier</label>
-      <input formControlName="loadingMulti" type="number">
+    <div *ngFor="let source of sources" class="button">
+      <div class="form-row">
+        <div class="vertical-center">{{ source }}</div><mat-icon title="Remove Source">delete</mat-icon>
     </div>
-    <div *ngIf="uploadedTimeSeries">
-      <div class="table-flex-container">
-        <table mat-table [dataSource]="dataSource">
-          <ng-container *ngFor="let disCol of columnNames" matColumnDef="{{disCol}}">
-            <th mat-header-cell *matHeaderCellDef>
-              <div>{{ disCol }}</div>
-            </th>
-            <td mat-cell *matCellDef="let row">{{ row[disCol] }}</td>
-          </ng-container>
-    
-          <tr mat-header-row *matHeaderRowDef="columnNames"></tr>
-    
-          <tr mat-row *matRowDef="let row; columns: columnNames"></tr>
-        </table>
-      </div>
-      <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
     </div>
-    <div class="form-row">
-      <div class="button" (click)="cancelAdd()">Cancel</div>
-      <div class="button" (click)="insertParameter()">Insert Loadings</div>
+    <div class="form-row" *ngIf="!addingParameter && !addingSource">
+      <div class="button" (click)="addParameter()">Add Parameter</div>
+      <div class="button" (click)="addSource()">Add Source</div>
     </div>
-  </div>
 
-  <div *ngIf="addingSource" class="segment-form">
-    New Source
-    <div class="form-row">
-      <div>Source Type</div>
-      <select>
-        <option>Point Source</option>
-        <option>Overland Flow</option>
-        <option>next</option>
-        <option>next</option>
-      </select>
-    </div>
-    <div class="form-row">
-      <label>Use Constant Loading?</label>
-      <input type="checkbox" (change)="useConstLoadings = !useConstLoadings" checked>
-    </div>
-    <div class="form-row">
-      <label *ngIf="useConstLoadings">Constant Loading</label>
-      <input *ngIf="useConstLoadings" formControlName="constLoading" type="text">
-    </div>
-    <div class="form-row">
-      <label *ngIf="!useConstLoadings">Upload Loading</label>
-      <input *ngIf="!useConstLoadings" 
-        formControlName="altLoadings"
-        type="file"  
-        accept=".csv"
-        name="files[]"
-        (change)="onFileChange($event)"
-      />
-    </div>
-    <div class="form-row">
-      <label>Loading Multiplier</label>
-      <input formControlName="loadingMulti" type="number">
-    </div>
-    <div *ngIf="uploadedTimeSeries">
-      <div class="table-flex-container">
-        <table mat-table [dataSource]="dataSource">
-          <ng-container *ngFor="let disCol of columnNames" matColumnDef="{{disCol}}">
-            <th mat-header-cell *matHeaderCellDef>
-              <div>{{ disCol }}</div>
-            </th>
-            <td mat-cell *matCellDef="let row">{{ row[disCol] }}</td>
-          </ng-container>
-    
-          <tr mat-header-row *matHeaderRowDef="columnNames"></tr>
-    
-          <tr mat-row *matRowDef="let row; columns: columnNames"></tr>
-        </table>
+    <div *ngIf="addingParameter" class="segment-form">
+      New Parameter
+      <div class="form-row">
+        <label>Use Constant Loading?</label>
+        <input type="checkbox" (change)="useConstLoadings = !useConstLoadings" checked>
       </div>
-      <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+      <div class="form-row">
+        <label *ngIf="useConstLoadings">Constant Loading</label>
+        <input *ngIf="useConstLoadings" formControlName="constLoading" type="text">
+      </div>
+      <div class="form-row">
+        <label *ngIf="!useConstLoadings">Upload Loading</label>
+        <input *ngIf="!useConstLoadings" 
+          formControlName="altLoadings"
+          type="file"  
+          accept=".csv"
+          name="files[]"
+          (change)="onFileChange($event)"
+        />
+      </div>
+      <div class="form-row">
+        <label>Loading Multiplier</label>
+        <input formControlName="loadingMulti" type="number">
+      </div>
+      <div *ngIf="uploadedTimeSeries">
+        <div class="table-flex-container">
+          <table mat-table [dataSource]="dataSource">
+            <ng-container *ngFor="let disCol of columnNames" matColumnDef="{{disCol}}">
+              <th mat-header-cell *matHeaderCellDef>
+                <div>{{ disCol }}</div>
+              </th>
+              <td mat-cell *matCellDef="let row">{{ row[disCol] }}</td>
+            </ng-container>
+      
+            <tr mat-header-row *matHeaderRowDef="columnNames"></tr>
+      
+            <tr mat-row *matRowDef="let row; columns: columnNames"></tr>
+          </table>
+        </div>
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+      </div>
+      <div class="form-row">
+        <div class="button" (click)="cancelAdd()">Cancel</div>
+        <div class="button" (click)="insertParameter()">Insert Loadings</div>
+      </div>
     </div>
-    <div class="form-row">
-      <div class="button" (click)="cancelAdd()">Cancel</div>
-      <div class="button" (click)="insertSource()">Insert Loadings</div>
+
+    <div *ngIf="addingSource" class="segment-form">
+      New Source
+      <div class="form-row">
+        <div>Source Type</div>
+        <select>
+          <option>Point Source</option>
+          <option>Overland Flow</option>
+          <option>next</option>
+          <option>next</option>
+        </select>
+      </div>
+      <div class="form-row">
+        <label>Use Constant Loading?</label>
+        <input type="checkbox" (change)="useConstLoadings = !useConstLoadings" checked>
+      </div>
+      <div class="form-row">
+        <label *ngIf="useConstLoadings">Constant Loading</label>
+        <input *ngIf="useConstLoadings" formControlName="constLoading" type="text">
+      </div>
+      <div class="form-row">
+        <label *ngIf="!useConstLoadings">Upload Loading</label>
+        <input *ngIf="!useConstLoadings" 
+          formControlName="altLoadings"
+          type="file"  
+          accept=".csv"
+          name="files[]"
+          (change)="onFileChange($event)"
+        />
+      </div>
+      <div class="form-row">
+        <label>Loading Multiplier</label>
+        <input formControlName="loadingMulti" type="number">
+      </div>
+      <div *ngIf="uploadedTimeSeries">
+        <div class="table-flex-container">
+          <table mat-table [dataSource]="dataSource">
+            <ng-container *ngFor="let disCol of columnNames" matColumnDef="{{disCol}}">
+              <th mat-header-cell *matHeaderCellDef>
+                <div>{{ disCol }}</div>
+              </th>
+              <td mat-cell *matCellDef="let row">{{ row[disCol] }}</td>
+            </ng-container>
+      
+            <tr mat-header-row *matHeaderRowDef="columnNames"></tr>
+      
+            <tr mat-row *matRowDef="let row; columns: columnNames"></tr>
+          </table>
+        </div>
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+      </div>
+      <div class="form-row">
+        <div class="button" (click)="cancelAdd()">Cancel</div>
+        <div class="button" (click)="insertSource()">Insert Loadings</div>
+      </div>
     </div>
   </div>
-</form>
+</div>
