--- a/src/app/components/input/segment-list/segment-list.component.html
+++ b/src/app/components/input/segment-list/segment-list.component.html
@@ -8,15 +8,7 @@
     </div>
     <div>User Segments</div>
     <div *ngIf="!selectedComId">
-        <strong>No user added segments</strong>
-        <div>Click map to add a segment</div>
-        <div>- or -</div>
-        <div class="form-row" [formGroup]="comidForm">
-            <div class="vertical-center">
-                <div>Comid <input class="input-comid" type="number" formControlName="comid" /></div>
-            </div> 
-            <div class="button" (click)="addSegment()">Add Segment</div>
-        </div>
+        <div><strong>No user added segments</strong></div>
     </div>
     <div class="button" *ngFor="let segment of userSegments" [class.active]="isActive(segment)" (click)="selectSegment(segment)">
         <div class="form-row">
