--- a/src/app/components/input/comid-select-input/comid-select-input.component.html
+++ b/src/app/components/input/comid-select-input/comid-select-input.component.html
@@ -1,6 +1,6 @@
 <div [formGroup]="inputForm">
-  <div><strong>Click map to add a segment</strong></div>
-  <div>- or -</div>
+  <div class="centered"><strong>Click map to add a segment</strong></div>
+  <div class="centered">- or -</div>
   <div class="form-row">
     <div class="vertical-center">
       <div>Comid <input class="input-comid" type="number" formControlName="comid" /></div>
@@ -10,19 +10,27 @@
 
   <div *ngIf="selectedComId" class="segment-form">
     <div><strong>Segment Loadings</strong></div>
-    <div>Parameters and Sources</div>
-    <div *ngIf="!parameters.length">
-      <strong>This segment has no parameters or sources</strong>
+    <div>Parameters</div>
+    <div class="scroll-pane-list" *ngIf="parameters.length">
+      <div *ngFor="let parameter of parameters" class="button">
+        <div class="form-row">
+          <div class="vertical-center">{{ parameter }}</div><mat-icon title="Remove Parameter">delete</mat-icon>
+        </div>
+      </div>
     </div>
-    <div *ngFor="let parameter of parameters" class="button">
-      <div class="form-row">
-        <div class="vertical-center">{{ parameter }}</div><mat-icon title="Remove Parameter">delete</mat-icon>
+    <div *ngIf="!parameters.length" class="centered">
+      <strong>This segment has no parameters</strong>
     </div>
+    <div>Sources</div>
+    <div class="scroll-pane-list" *ngIf="sources.length">
+      <div *ngFor="let source of sources" class="button">
+        <div class="form-row">
+          <div class="vertical-center">{{ source }}</div><mat-icon title="Remove Source">delete</mat-icon>
+        </div>
+      </div>
     </div>
-    <div *ngFor="let source of sources" class="button">
-      <div class="form-row">
-        <div class="vertical-center">{{ source }}</div><mat-icon title="Remove Source">delete</mat-icon>
-    </div>
+    <div *ngIf="!sources.length" class="centered">
+      <strong>This segment has no sources</strong>
     </div>
     <div class="form-row" *ngIf="!addingParameter && !addingSource">
       <div class="button" (click)="addParameter()">Add Parameter</div>
