--- a/src/app/components/input/segment-list/segment-list.component.html
+++ b/src/app/components/input/segment-list/segment-list.component.html
@@ -1,18 +1,19 @@
 <div class="list">
     <div>Boundary Segments</div>
     <div *ngIf="!boundarySegments.length"><strong>This network has no boundary segments</strong></div>
-    <div class="button" *ngFor="let segment of boundarySegments" [class.active]="isActive(segment)"  (click)="selectSegment(segment)">
-        <div class="form-row">
-            <div class="vertical-center">{{ segment }}</div><mat-icon title="Remove Segment">delete</mat-icon>
+    <div class="scroll-pane-list" *ngIf="boundarySegments.length">
+        <div class="button" *ngFor="let segment of boundarySegments" [class.active]="isActive(segment)"  (click)="selectSegment(segment)">
+            <div class="form-row">
+                <div class="vertical-center">{{ segment }}</div><mat-icon title="Remove Segment">delete</mat-icon>
+            </div>
         </div>
     </div>
     <div>User Segments</div>
-    <div *ngIf="!selectedComId">
-        <div><strong>No user added segments</strong></div>
-    </div>
-    <div class="button" *ngFor="let segment of userSegments" [class.active]="isActive(segment)" (click)="selectSegment(segment)">
-        <div class="form-row">
-            <div class="vertical-center">{{ segment }}</div><mat-icon title="Remove Segment">delete</mat-icon>
+    <div class="scroll-pane-list" *ngIf="userSegments.length">
+        <div class="button" *ngFor="let segment of userSegments" [class.active]="isActive(segment)" (click)="selectSegment(segment)">
+            <div class="form-row">
+                <div class="vertical-center">{{ segment }}</div><mat-icon title="Remove Segment">delete</mat-icon>
+            </div>
         </div>
     </div>
 </div>
