--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -4,11 +4,11 @@
         <div class="container-item first-item">
             <div>Area of Interest</div>
             <div class="section-item" *ngIf="!huc">
-                <div class="form-row">
+                <div class="form-row" [formGroup]="pPointForm">
                     <div class="vertical-center">
-                        <div>Comid <input type="number" class="input-comid" /></div>
+                        <div>Comid <input type="number" class="input-comid" formControlName="pPointComid"/></div>
                     </div>
-                    <div class="button">Get Catchment</div>
+                    <div class="button" (click)="getPourPoint()">Get Pour Point</div>
                 </div>
                 <div class="centered">- or -</div>
                 <div class="centered">
@@ -45,38 +45,68 @@
         </div>
 
         <!-- Aquatox section -->
-        <div class="container-item" [formGroup]="moduleForm">
+        <div class="container-item">
             <div>Aquatox Simulation</div>
 
-            <div class="section-item" *ngIf="jsonFlags && !baseJson">
+            <div class="section-item" *ngIf="jsonFlags && !baseJson" [formGroup]="moduleForm">
                 <div>Module Selection Flags</div>
                 <div *ngFor='let flag of jsonFlags'><input formControlName="{{flag}}" type="checkbox"/> {{ flag }}</div>
+
+                <div>Simulation Globals</div>
+                    <div class="form-row">
+                        <div>Study Name </div><input type="text" />
+                    </div>
+                    <div class="form-row">
+                        <div>
+                            First Day
+                            <input type="date" />
+                        </div>
+                        <div>
+                            Last Day
+                            <input type="date" />
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="vertical-center">Time Step Size</div><div class="form-row"><div class="button">Hours</div><div class="button">Days</div></div>
+                    </div>
+                    <div class="form-row">
+                        Use Alternate Step Size <input type="checkbox" />
+                    </div>
+                    <div class="form-row" *ngIf="isUsingFixedStep()">
+                        Fixed Step Size <input type="number" />
+                    </div>
+
                 <div class="button" (click)="getBaseJSONByFlags()">Get Base Simulation</div>
             </div>
-            <div class="button" *ngIf="baseJson" (click)="clearBaseJson()">Clear Base Simulation</div>
 
-            <ng-container *ngIf="baseJson">
+            <div *ngIf="baseJson" [formGroup]="pSetUpForm">
+                <div class="button" (click)="clearBaseJson()">Clear Base Simulation</div>
                 <div class="section-item" id="simulation-globals">
                     <div>Simulation Globals</div>
                     <div class="form-row">
-                        <div>Site name <input type="text"></div>
-                        <div>Site comment <input type="text"></div>
+                        <div>Study Name </div><input type="text" formControlName="studyName">
                     </div>
                     <div class="form-row">
                         <div>
-                            <mat-label>Enter a date range</mat-label>
-                            <mat-date-range-input [rangePicker]="picker">
-                                <input matStartDate placeholder="Start date">
-                                <input matEndDate placeholder="End date">
-                            </mat-date-range-input>
+                            First Day
+                            <input type="date" formControlName="firstDay">
                         </div>
                         <div>
-                            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                            <mat-date-range-picker #picker></mat-date-range-picker>
+                            Last Day
+                            <input type="date" formControlName="lastDay">
                         </div>
                     </div>
+                    <div class="form-row">
+                        <div class="vertical-center">Time Step size in</div><div class="form-row"><div class="button">Hours</div><div class="button">Days</div></div>
+                    </div>
+                    <div class="form-row">
+                        Use Alternate Fixed Step Size <input type="checkbox" formControlName="useFixStepSize" />
+                    </div>
+                    <div class="form-row" *ngIf="isUsingFixedStep()">
+                        Fixed StepSize <input type="number" formControlName="fixStepSize" />
+                    </div>
                 </div>
-            </ng-container>
+            </div>
 
             <div class="section-item" *ngIf="baseJson && !stream">
                 <div *ngIf="!huc || !catchment" class="centered">
