--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,12 @@ input[type='number'].input-comid {
     width: 100px;
 }
 
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
 .button {
     font-size: .75rem;
     display: grid;
@@ -25,6 +31,9 @@ input[type='number'].input-comid {
     height: 30px;
     border-radius: 5px;
     background-color: var(--main-button);
+	-webkit-box-shadow: 0 3px 3px -2px black;
+	   -moz-box-shadow: 0 3px 3px -2px black;
+	        box-shadow: 0 3px 3px -2px black;
 }
 
 .button:hover {
@@ -33,8 +42,10 @@ input[type='number'].input-comid {
 }
 
 .button:active {
-    transform: translateY(1px);
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    transform: translateY(2px);
+    -webkit-box-shadow: none;
+       -moz-box-shadow: none;
+            box-shadow: none;
 }
 
 .active {
@@ -73,17 +84,17 @@ select {
 
 /* Track */
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey; 
+    box-shadow: inset 0 0 5px lightgrey; 
     border-radius: 5px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: lightgray; 
+    background: gray; 
     border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: gray; 
+    background: darkgrey; 
 }
