--- a/src/app/components/map/map-control/map-control.component.html
+++ b/src/app/components/map/map-control/map-control.component.html
@@ -7,12 +7,13 @@
     </div>
     
     <div class="item">
-        <div>Features</div>
+        <div>Overlays</div>
         <app-layer-control *ngFor="let feature of defaultFeatures" [feature]="feature"></app-layer-control>
     </div>
 
     <div class="item">
-        <div>User Features</div>
+        <div>Area of Interest</div>
+        <div *ngIf="!simFeatures.length" style="width: 160px;"><strong>Enter ComId on form or click map to select area of interest</strong></div>
         <app-layer-control *ngFor="let feature of simFeatures" [feature]="feature"></app-layer-control>
         <div class="scroll-pane-control">
         </div> 
