--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,7 @@
     --main-button: steelblue;
     --main-hover: rgba(146, 146, 146, 0.5);
     --main-active: rgb(250, 146, 146);
+    --main-ready: rgb(0, 200, 0);
 
     --row-gap: .125rem;
     --column-gap: .125rem;
@@ -50,6 +51,10 @@ input[type=number]::-webkit-outer-spin-button {
 
 .active {
     background-color: var(--main-active);
+}
+
+.ready {
+    background-color: var(--main-ready);
 }
 
 body { 
