fix download opening new tab

--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -131,7 +131,7 @@
         </div>
 
         <!-- HMS section -->
-        <div class="container-item">
+        <!-- <div class="container-item">
             <div>HMS Data</div>
             <div class="section-item" id="mat-progress-bar" *ngIf="loadingApi">
                 <mat-progress-bar mode="indeterminate"></mat-progress-bar>
@@ -167,6 +167,6 @@
                     <div>{{ response.endpoint }} {{ response.dataSource }} {{ response.dataset }} <mat-icon title="Download Data">download</mat-icon> <mat-icon title="Remove Data">delete</mat-icon></div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 </div>
