--- a/src/app/components/input/input/input.component.css
+++ b/src/app/components/input/input/input.component.css
@@ -4,14 +4,16 @@
 
 .scroll-pane {
     overflow-y: auto;
-    height: 791px;
+    row-gap: var(--row-gap);
+}
+
+.container-item {
+    border: 1px solid rgb(150, 150, 150);
 }
 
 .container-item,
 .section-item {
-    margin: .25rem;
     padding: .5rem;
-    border: 1px solid black;
     border-radius: 5px;
     background-color: var(--main-color);
     display: flex;
@@ -22,21 +24,6 @@
 .section-item {
     margin: 0px;
 }
-
-/* #segment-form {
-    display: flex;
-    flex-direction: column;
-    row-gap: var(--row-gap);
-}
-
-#endpoint-form {
-    display: grid;
-    row-gap: .5rem;
-}
-
-#parameter-form {
-    display: grid;
-} */
 
 .form-row,
 .controls {
