--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -1,7 +1,7 @@
 <div class="container-col-1">
     <div class="scroll-pane">
         <!-- AOI section -->
-        <div class="container-item first-item">
+        <div class="container-item">
             <div>Area of Interest</div>
             <div class="section-item" *ngIf="!huc">
                 <div class="form-row" [formGroup]="pPointForm">
@@ -45,7 +45,7 @@
         </div>
 
         <!-- Aquatox section -->
-        <div class="container-item">
+        <div class="container-item" *ngIf="stream">
             <div>Aquatox Simulation</div>
 
             <div class="section-item" *ngIf="jsonFlags && !baseJson" [formGroup]="moduleForm">
