--- a/src/app/components/map/map-control/map-control.component.css
+++ b/src/app/components/map/map-control/map-control.component.css
@@ -2,16 +2,15 @@
     display: grid;
     height: 100%;
     min-width: 180px;
-    background-color: var(--main-background);
     grid-template-rows: auto auto 1fr;
+    row-gap: var(--row-gap);
 }
 
 .item {
-    margin: .25rem;
     margin-top: 0;
     padding: .25rem;
-    border: 1px solid black;
     border-radius: 5px;
+    border: 1px solid rgb(150, 150, 150);
     background-color: var(--main-color);
     display: flex;
     flex-direction: column;
