--- a/src/app/components/map/map-control/map-control.component.html
+++ b/src/app/components/map/map-control/map-control.component.html
@@ -11,11 +11,8 @@
         <app-layer-control *ngFor="let feature of defaultFeatures" [feature]="feature"></app-layer-control>
     </div>
 
-    <div class="item">
+    <div class="item" *ngIf="simFeatures.length" >
         <div>Area of Interest</div>
-        <div *ngIf="!simFeatures.length" style="width: 160px;"><strong>Enter ComId on form or click map to select area of interest</strong></div>
         <app-layer-control *ngFor="let feature of simFeatures" [feature]="feature"></app-layer-control>
-        <div class="scroll-pane-control">
-        </div> 
     </div>
 </div>
