--- a/src/app/components/ui/expansion-panel-right/expansion-panel-right.component.html
+++ b/src/app/components/ui/expansion-panel-right/expansion-panel-right.component.html
@@ -1,9 +1,13 @@
 <div class="container">
-    <ng-container *ngIf="open">
-        <mat-icon (click)="closePanel()" title="collapse panel">chevron_right</mat-icon>
+    <div *ngIf="open" class="panel-open-right">
+        <div (click)="closePanel()">
+            <mat-icon matTooltip="Hide" [matTooltipPosition]="tooltipPosition">chevron_right</mat-icon>
+        </div>
         <app-map-control></app-map-control>
-    </ng-container>
-    <ng-container *ngIf="!open">
-        <mat-icon (click)="openPanel()" title="expand panel">chevron_left</mat-icon>
-    </ng-container>
+    </div>
+    <div *ngIf="!open">
+        <div (click)="openPanel()">
+            <mat-icon matTooltip="Show Map Layer Controls" [matTooltipPosition]="tooltipPosition">chevron_left</mat-icon>
+        </div>
+    </div>
 </div>
