--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 :root {
-    --main-color: rgb(250, 250, 210);
+    /* --main-color: rgb(250, 250, 210); */
+    --main-color: rgb(195, 195, 195);
     --main-background: rgb(176, 196, 222);
-    --main-button: steelblue;
+    --main-transparent: rgba(255, 255, 255, .25);
+    /* --main-button: steelblue; */
+    --main-button: rgb(176, 196, 222);
     --main-hover: rgba(146, 146, 146, 0.5);
     --main-active: rgb(250, 146, 146);
     --main-ready: rgb(0, 200, 0);
@@ -31,6 +34,7 @@ input[type=number]::-webkit-outer-spin-button {
     place-items: center;
     height: 30px;
     border-radius: 5px;
+    border: 1px solid rgb(150, 150, 150);
     background-color: var(--main-button);
 	-webkit-box-shadow: 0 3px 3px -2px black;
 	   -moz-box-shadow: 0 3px 3px -2px black;
