--- a/src/app/components/input/input/input.component.css
+++ b/src/app/components/input/input/input.component.css
@@ -1,28 +1,7 @@
 .container-col-1 {
     width: 425px;
-}
-
-.scroll-pane {
-    overflow-y: auto;
+    display: grid;
     row-gap: var(--row-gap);
-}
-
-.container-item {
-    border: 1px solid rgb(150, 150, 150);
-}
-
-.container-item,
-.section-item {
-    padding: .5rem;
-    border-radius: 5px;
-    background-color: var(--main-color);
-    display: flex;
-    flex-direction: column;
-    row-gap: var(--row-gap);
-}
-
-.section-item {
-    margin: 0px;
 }
 
 .form-row,
@@ -41,10 +20,6 @@
 #mat-progress-bar {
     width: 95%;
     height: 2rem;
-}
-
-.centered {
-    text-align: center;
 }
 
 ::ng-deep .mat-date-range-input {
