--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -1,4 +1,5 @@
 <div class="container-col-1">
+    <strong class="centered">Aquatox WebWorkflow</strong>
     <div class="scroll-pane">
         <!-- AOI section -->
         <div class="container-item">
@@ -19,12 +20,11 @@
                 </div>
             </div>
             <div class="section-item" *ngIf="huc">
-                <div>{{ huc.name }}</div>
                 <div class="form-row">
                     <div class="vertical-center">
-                        <div>HUC {{ huc.id }}</div>
+                        <div>{{ huc.name }}</div>
                     </div>
-                    <div class="button" (click)="clearHuc()">Clear HUC</div>
+                    <div class="button" (click)="clearHuc()">Reset Area of Interest</div>
                 </div>
                 <div *ngIf="!catchment" class="centered"><strong>Click map to select catchment</strong></div>
                 <div *ngIf="catchment">
