--- a/src/app/components/map/map-control/map-control.component.css
+++ b/src/app/components/map/map-control/map-control.component.css
@@ -1,26 +1,6 @@
 .grid-container {
+    width: 180px;
+    max-height: var(--main-max-panel-height);
     display: grid;
-    height: 100%;
-    min-width: 180px;
-    grid-template-rows: auto auto 1fr;
-    row-gap: var(--row-gap);
-}
-
-.item {
-    margin-top: 0;
-    padding: .25rem;
-    border-radius: 5px;
-    border: 1px solid rgb(150, 150, 150);
-    background-color: var(--main-color);
-    display: flex;
-    flex-direction: column;
-    row-gap: var(--row-gap);
-}
-
-.scroll-pane-control {
-    max-height: 330px;
-    overflow-y: auto;
-    display: flex;
-    flex-direction: column;
     row-gap: var(--row-gap);
 }
