--- a/src/app/components/ui/expansion-panel-left/expansion-panel-left.component.css
+++ b/src/app/components/ui/expansion-panel-left/expansion-panel-left.component.css
@@ -16,5 +16,6 @@ mat-icon:hover {
 }
 
 app-input {
-    background: var(--main-transparent);
+    background-color: var(--main-transparent);
+    border-radius: 5px;
 }
