--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
     /* --main-color: rgb(250, 250, 210); */
     --main-color: rgb(195, 195, 195);
     --main-background: rgb(176, 196, 222);
-    --main-transparent: rgba(255, 255, 255, .25);
+    --main-transparent: rgba(176, 196, 222, 0.75);
     /* --main-button: steelblue; */
     --main-button: rgb(176, 196, 222);
     --main-hover: rgba(146, 146, 146, 0.5);
@@ -12,6 +12,8 @@
 
     --row-gap: .125rem;
     --column-gap: .125rem;
+
+    --main-max-panel-height: 700px;
 }
 
 input[type='number'] {
@@ -70,20 +72,36 @@ select {
     cursor: pointer;
 }
 
-.scroll-pane-list {
-    overflow-y: auto;
-    max-height: 145px;
-    display: flex;
-    flex-direction: column;
-    row-gap: var(--row-gap);
-    border: 1px solid black;
-    border-radius: 5px;
-    padding: var(--row-gap);
+.centered {
+    text-align: center;
 }
 
 .vertical-center {
     display: grid;
     align-items: center;
+}
+
+.container-item,
+.section-item,
+.scroll-pane {
+    display: flex;
+    flex-direction: column;
+    row-gap: var(--row-gap);
+}
+
+.container-item {
+    padding: .25rem;
+    background-color: var(--main-color);
+    border: 1px solid rgb(150, 150, 150);
+}
+
+.section-item {
+    margin: 0px;
+}
+
+.scroll-pane {
+    overflow-y: auto;
+    max-height: var(--main-max-panel-height);
 }
 
 /* width */
