--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -1,4 +1,4 @@
-<div class="container-col-1">
+<div class="input-container">
     <strong class="centered">Aquatox WebWorkflow</strong>
     <div class="scroll-pane">
         <!-- AOI section -->
