--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -1,8 +1,7 @@
 body {
     display: grid;
     grid-template-rows: auto 1fr auto;
-    background-color: #2f7b9e;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
+    background-color: var(--main-epa);
 }
 
 .float {
