--- a/src/app/components/ui/expansion-panel-right/expansion-panel-right.component.html
+++ b/src/app/components/ui/expansion-panel-right/expansion-panel-right.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-    <div *ngIf="open" class="panel-open-right">
+<div class="panel-right">
+    <div *ngIf="open" class="panel-right-open">
         <div (click)="closePanel()">
             <mat-icon matTooltip="Hide" [matTooltipPosition]="tooltipPosition">chevron_right</mat-icon>
         </div>
