--- a/src/app/components/input/input/input.component.css
+++ b/src/app/components/input/input/input.component.css
@@ -1,20 +1,7 @@
-.container-col-1 {
+.input-container {
     width: 425px;
     display: grid;
     row-gap: var(--row-gap);
-}
-
-.form-row,
-.controls {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    column-gap: var(--column-gap);
-}
-
-.control {
-    display: grid;
-    grid-template-columns: 1fr;
-    width: 100%;
 }
 
 #mat-progress-bar {
