--- a/src/app/components/ui/expansion-panel-left/expansion-panel-left.component.html
+++ b/src/app/components/ui/expansion-panel-left/expansion-panel-left.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-    <div *ngIf="open" class="panel-open-left">
+<div class="panel-left">
+    <div *ngIf="open" class="panel-left-open">
         <app-input></app-input>
         <div (click)="closePanel()">
             <mat-icon matTooltip="Hide" [matTooltipPosition]="tooltipPosition">chevron_left</mat-icon>
