--- a/src/app/components/ui/expansion-panel-right/expansion-panel-right.component.css
+++ b/src/app/components/ui/expansion-panel-right/expansion-panel-right.component.css
@@ -1,15 +1,10 @@
-mat-icon:hover {
-    cursor: pointer;
-    background-color: var(--main-hover);
-}
-
-.container {
+.panel-right {
     display: grid;
     grid-template-rows: auto 1fr;
     margin: .25rem;
 }
 
-.panel-open-right {
+.panel-right-open {
     display: grid;
     grid-template-columns: auto 1fr;
     column-gap: var(--column-gap);
@@ -17,5 +12,4 @@ mat-icon:hover {
 
 app-map-control {
     background-color: var(--main-transparent);
-    border-radius: 5px;
 }
